# GnuCOBOL

./: .gitattributes  .gitignore  ChangeLog  DEPENDENCIES  HACKING  Makefile.am  Makefile.in  NEWS  NOTES  README  README.md  THANKS  TODO  aclocal.m4  autogen.sh  cobc-dev.7  config.h.in  configure  configure.ac  create_win_dist.sh  gnucobol.spec  libcob.h  tarstamp.gen  tarstamp.h
build_aux/: ChangeLog  bootstrap  config.guess  create_mingw_bindist.sh  ltmain.sh  pre-inst-env.in
build_windows/: ChangeLog.txt  README.txt  config.h.bdb.win  config.h.in  config.h.tmpl  config.h.vb.win  defaults.h.in  defaults.h.tmpl  gcvsvars.cmd  makebisonflex.bat  makebisonflex.cmd  makedist.bat  makedist.cmd  set_env_vs.bat  set_env_vs_dist.bat  set_env_vs_dist_x64.bat  set_env_vs_x64.bat  set_env_vs_x64.cmd  set_env_vs_x64.dist.tmpl.cmd  set_env_vs_x86.cmd  set_env_vs_x86.dist.tmpl.cmd  version_cobc.rc  version_cobcrun.rc  version_gcdiff.rc  version_libcob.rc
build_windows/ocide/: GnuCOBOL.cwa  cobc.exe.cpj  cobcrun.exe.cpj  libcob.dll.cpj  libsupport.l.cpj
build_windows/vc10/: GnuCOBOL.sln  cobc.vcxproj  cobcrun.vcxproj  libcob.vcxproj  libcob.vcxproj.filters  libsupport.vcxproj
build_windows/vc11/: GnuCOBOL.sln  cobcrun.vcxproj  config.h  gcdiff.vcxproj  gcdiff.vcxproj.filters  libcob.vcxproj  libcob.vcxproj.filters
build_windows/vc12/: GnuCOBOL.sln  cobcrun.vcxproj  cobcrun.vcxproj.filters  gcdiff.vcxproj  libcob.vcxproj  libcob.vcxproj.filters  libsupport.vcxproj
build_windows/vc14/: GnuCOBOL.sln  cobc.vcxproj  cobcrun.vcxproj  libcob.vcxproj  libcob.vcxproj.filters  libsupport.vcxproj  libsupport.vcxproj.filters
build_windows/vc14_1/: cobc.vcxproj.filters  libcob.vcxproj  libcob.vcxproj.filters
build_windows/vc7/: config.h  libcob.vcproj
build_windows/vc8/: GnuCOBOL.sln  cobc.vcproj  cobcrun.vcproj  gcdiff.vcproj  libcob.vcproj
build_windows/vc9/: GnuCOBOL.sln  gcdiff.vcproj  libcob.vcproj
build_windows/vs2005/: GnuCOBOL.sln  cobc.vcproj  cobcrun.vcproj  libcob.vcproj
build_windows/vs2008/: GnuCOBOL.sln  cobc.vcproj  cobcrun.vcproj  libcob.vcproj
build_windows/vs2010/: GnuCOBOL.sln  cobc.vcxproj  cobc.vcxproj.filters  cobcrun.vcxproj  libcob.vcxproj  libcob.vcxproj.filters  libsupport.vcxproj  libsupport.vcxproj.filters
build_windows/vs2012/: GnuCOBOL.sln  cobc.vcxproj  cobc.vcxproj.filters  cobcrun.vcxproj  libcob.vcxproj  libcob.vcxproj.filters  libsupport.vcxproj
build_windows/vs2013/: GnuCOBOL.sln  cobc.vcxproj  cobc.vcxproj.filters  cobcrun.vcxproj  libcob.vcxproj  libcob.vcxproj.filters  libsupport.vcxproj
build_windows/vs2015/: GnuCOBOL.sln  cobc.vcxproj  cobc.vcxproj.filters  cobcrun.vcxproj  libcob.vcxproj  libcob.vcxproj.filters  libsupport.vcxproj
cobc/: ChangeLog  Makefile.am  Makefile.in  Makefile.options  cobc.1  cobc.c  cobc.h  codegen.c  codeoptim.c  codeoptim.def  config.c  config.def  debug.c  error.c  field.c  flag.def  help.c  opt_parse.y  opt_scan.l  opt_test.c  options.c  options.h  parser.c  parser.h  parser.y  pplex.c  pplex.l  ppparse.c  ppparse.def  ppparse.h  ppparse.y  reserved.c  scanner.c  scanner.l  sqlxfdgen.c  tree.c  tree.h  typeck.c  warning.def
config/: ChangeLog  Makefile.am  Makefile.in  acu-strict.conf  acu.conf  acu.words  bs2000-strict.conf  bs2000.conf  bs2000.words  cobol2002.conf  cobol2002.words  cobol2014.conf  cobol2014.words  cobol85.conf  cobol85.words  default.conf  ibm-strict.conf  ibm.conf  ibm.words  lax.conf-inc  mf-strict.conf  mf.conf  mf.words  mvs-strict.conf  mvs.conf  mvs.words  realia-strict.conf  realia.words  rm-strict.conf  rm.words  runtime.cfg  xopen.conf
copy/: ChangeLog  Makefile.am  Makefile.in  screenio.cpy  xfhfcd3.cpy
doc/: ChangeLog  Makefile.am  Makefile.in  cbchelp.tex  cbconf.tex  cbhelp.tex  cbhelp.tex.gen  cbintr.awk  cbintr.tex  cbrese.tex  cbrunt-sect-1.awk  cbrunt.tex  cbrunt.tex.gen  cobcinfo.sh  gnucobol.info  gnucobol.texi  os.db.gen
extras/: Makefile.am  Makefile.in
lib/: ChangeLog  Makefile.am  Makefile.in
libcob/: ChangeLog  Makefile.am  Makefile.in  call.c  cobgetopt.c  coblocal.h  common.c  common.h  exception.def  fbdb.c  fextfh.c  fileio.c  fileio.h  fisam.c  flmdb.c  focextfh.c  foci.c  fodbc.c  fsqlxfd.c  intrinsic.c  mlio.c  move.c  numeric.c  reportio.c  screenio.c  strings.c  sysdefines.h  system.def  termio.c  xml.c
po/: ChangeLog  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  fr.po  gnu-cobol.pot  gnucobol.pot  it.po  ja.gmo  ja.po  nl.po  pt.po  sr.po  sv.po
tests/: ChangeLog  Makefile.am  Makefile.in  atlocal.in  atlocal_valgrind  atlocal_win  listings-sed.sh  package.m4  run_prog_manual.sh.in  testsuite  testsuite.at
(+59 files in other folders)
